--- a/app/src/index.html
+++ b/app/src/index.html
@@ -30,9 +30,9 @@
                 <div layout="row" flex="20" flex-sm="30" hide-xs style="height: 100%;" >
                     <div flex="none" style="width: 7px; height: 100%;"></div>
                     <div flex layout="column" layout-align="center" class="padded" md-whiteframe="1" style="height: 100%; ">
-                        <div flex="15" layout="row" layout-align="center" style="height: 100%; color: white; padding: 2px;"><h3>Follow Us</h3></div>
-                        <div flex="65" layout="column" layout-align="center" style="height: 100%;">
-                            <div flex="60" layout="column" style="height: 100%;">
+                        <div flex="20" layout="row" layout-align="center" style="height: 100%; color: white; padding: 2px;"><h3>Follow Us</h3></div>
+                        <div flex="60" layout="column" layout-align="center" style="height: 100%;">
+                            <div flex="65" layout="column" style="height: 100%;">
                                 <div layout="row" layout-align="center center" style="height: 100%;">
                                     <div style="height: 32px; width: 32px; padding: 2px;"><img src="img/facebook.png" alt="facebook"></div>
                                     <div style="height: 32px; width: 32px; padding: 2px;"><img src="img/twitter.png" alt="twitter"></div>
@@ -134,8 +134,35 @@
         </div>
     </div>
 
-    <div id="footer" layout="row" layout-wrap>
-
+    <div id="footer">
+        <div layout="row" layout-align="center center" style="height:100%; background-color: #9E9E9E; color: white;">
+            <div layout="column" flex-gt-sm="70" flex style="height: 100%; background-color: #ee6e73;">
+                <div flex="75" style="height: 100%; ">
+                    <div layout="row" style="height: 100%;">
+                        <div flex="70" layout="row" layout-align="center" style="">
+                            <div flex="70" layout="column" layout-align="center none" style="height: 100%;">
+                                <div flex="80" style="height: 100%;">
+                                    <div flex><h3>Footer Content</h3></div>
+                                    <div flex><p>You can use rows and columns here to organize your footer content.</p></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div flex="30"></div>
+                    </div>
+                </div>
+                <div flex="25" style="background-color: #df696e;">
+                    <div layout="row" style="height: 100%;">
+                        <div flex="20">
+                            <div layout="row" layout-align="center center" style="font-size: small">
+                                <p>© 2017 Copyright | infosec</p>
+                            </div>
+                        </div>
+                        <div flex></div>
+                        <div flex="20"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="js/angular.min.js"></script>
