--- a/app/src/index.html
+++ b/app/src/index.html
@@ -89,10 +89,35 @@
                         <div ng-controller="PluginController" id="left_plugins" flex-gt-sm="20" hide show-gt-sm style="background-color: #9E9E9E;">
                             <div layout="row" style="height:100%;">
                                 <div id="plugin_wrapper" flex style="height: 100%;">
-                                    <plugin type="plugins.left1"></plugin>
-                                    <plugin type="plugins.left2"></plugin>
-                                    <plugin type="plugins.left3"></plugin>
-                                    <plugin type="plugins.left4"></plugin>
+                                    <plugin type="plugins.left1" style="height: auto;">
+                                        <md-button ng-click="plugins.left1.menu_list.anasayfa.toggle = !plugins.left1.menu_list.anasayfa.toggle" style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
+                                            <span flex style="text-transform: capitalize;">anasayfa</span>
+                                        </md-button>
+                                        <md-divider ></md-divider>
+                                        <div ng-show="plugins.left1.menu_list.anasayfa.toggle">
+                                            <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
+                                                <span flex style="text-transform: capitalize; padding-left: 5px; ">sub1</span>
+                                            </md-button>
+                                            <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
+                                                <span flex style="text-transform: capitalize; padding-left: 5px; ">sub2</span>
+                                            </md-button>
+                                        </div>
+                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
+                                            <span flex style="text-transform: capitalize;">yazılar</span>
+                                        </md-button>
+                                        <md-divider ></md-divider>
+                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
+                                            <span flex style="text-transform: capitalize;">haberler</span>
+                                        </md-button>
+                                        <md-divider ></md-divider>
+                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
+                                            <span flex style="text-transform: capitalize;">Siber atölye</span>
+                                        </md-button>
+                                        <md-divider ></md-divider>
+                                    </plugin>
+                                    <plugin type="plugins.left2">Some Content Here</plugin>
+                                    <plugin type="plugins.left3">Some Content Here</plugin>
+                                    <plugin type="plugins.left4">Some Content Here</plugin>
                                 </div>
                                 <div flex="none" hide show-gt-sm style="width: 7px; height: 100%;">
 
@@ -109,10 +134,10 @@
                             <div layout="row" style="height: 100%;">
                                 <div flex="none" style="width: 7px; height: 100%;"></div>
                                 <div flex style="height: 100%;">
-                                    <plugin type="plugins.right1"></plugin>
-                                    <plugin type="plugins.right2"></plugin>
-                                    <plugin type="plugins.right3"></plugin>
-                                    <plugin type="plugins.right4"></plugin>
+                                    <plugin type="plugins.right1">Some Content Here</plugin>
+                                    <plugin type="plugins.right2">Some Content Here</plugin>
+                                    <plugin type="plugins.right3">Some Content Here</plugin>
+                                    <plugin type="plugins.right4">Some Content Here</plugin>
                                 </div>
                             </div>
                         </div>
