örnek pluginler oluşturuldu

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -115,9 +115,70 @@
                                         </md-button>
                                         <md-divider ></md-divider>
                                     </plugin>
-                                    <plugin type="plugins.left2">Some Content Here</plugin>
-                                    <plugin type="plugins.left3">Some Content Here</plugin>
-                                    <plugin type="plugins.left4">Some Content Here</plugin>
+                                    <plugin type="plugins.left2">
+                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
+                                            <span flex style="text-transform: capitalize;">{{plugins.left2.list.appsec.title}}</span>
+                                        </md-button>
+                                        <md-divider ></md-divider>
+                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
+                                            <span flex style="text-transform: capitalize;">{{plugins.left2.list.netsec.title}}</span>
+                                        </md-button>
+                                        <md-divider ></md-divider>
+                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
+                                            <span flex style="text-transform: capitalize;">{{plugins.left2.list.endpsec.title}}</span>
+                                        </md-button>
+                                        <md-divider ></md-divider>
+                                    </plugin>
+                                    <plugin type="plugins.left3">
+                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
+                                            <span flex style="text-transform: capitalize;">{{plugins.left3.list.konu1.title}}</span>
+                                        </md-button>
+                                        <md-divider ></md-divider>
+                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
+                                            <span flex style="text-transform: capitalize;">{{plugins.left3.list.konu2.title}}</span>
+                                        </md-button>
+                                        <md-divider ></md-divider>
+                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
+                                            <span flex style="text-transform: capitalize;">{{plugins.left3.list.konu3.title}}</span>
+                                        </md-button>
+                                        <md-divider ></md-divider>
+                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
+                                            <span flex style="text-transform: capitalize;">{{plugins.left3.list.konu4.title}}</span>
+                                        </md-button>
+                                        <md-divider ></md-divider>
+                                    </plugin>
+                                    <plugin type="plugins.left4">
+                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
+                                            <span flex style="text-transform: capitalize;">{{plugins.left4.list.konu1.title}}</span>
+                                        </md-button>
+                                        <md-divider ></md-divider>
+                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
+                                            <span flex style="text-transform: capitalize;">{{plugins.left4.list.konu2.title}}</span>
+                                        </md-button>
+                                        <md-divider ></md-divider>
+                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
+                                            <span flex style="text-transform: capitalize;">{{plugins.left4.list.konu3.title}}</span>
+                                        </md-button>
+                                        <md-divider ></md-divider>
+                                    </plugin>
+                                    <plugin type="plugins.left5">
+                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
+                                            <span flex style="text-transform: capitalize;">{{plugins.left5.list.konu1.title}}</span>
+                                        </md-button>
+                                        <md-divider ></md-divider>
+                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
+                                            <span flex style="text-transform: capitalize;">{{plugins.left5.list.konu2.title}}</span>
+                                        </md-button>
+                                        <md-divider ></md-divider>
+                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
+                                            <span flex style="text-transform: capitalize;">{{plugins.left5.list.konu3.title}}</span>
+                                        </md-button>
+                                        <md-divider ></md-divider>
+                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
+                                            <span flex style="text-transform: capitalize;">{{plugins.left5.list.konu4.title}}</span>
+                                        </md-button>
+                                        <md-divider ></md-divider>
+                                    </plugin>
                                 </div>
                                 <div flex="none" hide show-gt-sm style="width: 7px; height: 100%;">
 
