--- a/app/src/index.html
+++ b/app/src/index.html
@@ -90,94 +90,30 @@
                             <div layout="row" style="height:100%;">
                                 <div id="plugin_wrapper" flex style="height: 100%;">
                                     <plugin type="plugins.left1" style="height: auto;">
-                                        <md-button ng-click="plugins.left1.menu_list.anasayfa.toggle = !plugins.left1.menu_list.anasayfa.toggle" style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
-                                            <span flex style="text-transform: capitalize;">anasayfa</span>
-                                        </md-button>
-                                        <md-divider ></md-divider>
-                                        <div ng-show="plugins.left1.menu_list.anasayfa.toggle">
-                                            <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
-                                                <span flex style="text-transform: capitalize; padding-left: 5px; ">sub1</span>
-                                            </md-button>
-                                            <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
-                                                <span flex style="text-transform: capitalize; padding-left: 5px; ">sub2</span>
-                                            </md-button>
-                                        </div>
-                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
-                                            <span flex style="text-transform: capitalize;">yazılar</span>
-                                        </md-button>
-                                        <md-divider ></md-divider>
-                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
-                                            <span flex style="text-transform: capitalize;">haberler</span>
-                                        </md-button>
-                                        <md-divider ></md-divider>
-                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
-                                            <span flex style="text-transform: capitalize;">Siber atölye</span>
-                                        </md-button>
-                                        <md-divider ></md-divider>
+                                        <menu-item content="plugins.left1.main"></menu-item>
+                                        <menu-item content="plugins.left1.docs"></menu-item>
+                                        <menu-item content="plugins.left1.news"></menu-item>
+                                        <menu-item content="plugins.left1.atolye"></menu-item>
                                     </plugin>
                                     <plugin type="plugins.left2">
-                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
-                                            <span flex style="text-transform: capitalize;">{{plugins.left2.list.appsec.title}}</span>
-                                        </md-button>
-                                        <md-divider ></md-divider>
-                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
-                                            <span flex style="text-transform: capitalize;">{{plugins.left2.list.netsec.title}}</span>
-                                        </md-button>
-                                        <md-divider ></md-divider>
-                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
-                                            <span flex style="text-transform: capitalize;">{{plugins.left2.list.endpsec.title}}</span>
-                                        </md-button>
-                                        <md-divider ></md-divider>
+                                        <div ng-repeat="item in plugins.left2.items" style="height: 100%;" >
+                                            <menu-item content="item"></menu-item>
+                                        </div>
                                     </plugin>
                                     <plugin type="plugins.left3">
-                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
-                                            <span flex style="text-transform: capitalize;">{{plugins.left3.list.konu1.title}}</span>
-                                        </md-button>
-                                        <md-divider ></md-divider>
-                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
-                                            <span flex style="text-transform: capitalize;">{{plugins.left3.list.konu2.title}}</span>
-                                        </md-button>
-                                        <md-divider ></md-divider>
-                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
-                                            <span flex style="text-transform: capitalize;">{{plugins.left3.list.konu3.title}}</span>
-                                        </md-button>
-                                        <md-divider ></md-divider>
-                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
-                                            <span flex style="text-transform: capitalize;">{{plugins.left3.list.konu4.title}}</span>
-                                        </md-button>
-                                        <md-divider ></md-divider>
+                                        <div ng-repeat="item in plugins.left3.items" style="height: 100%;" >
+                                            <menu-item content="item"></menu-item>
+                                        </div>
                                     </plugin>
                                     <plugin type="plugins.left4">
-                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
-                                            <span flex style="text-transform: capitalize;">{{plugins.left4.list.konu1.title}}</span>
-                                        </md-button>
-                                        <md-divider ></md-divider>
-                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
-                                            <span flex style="text-transform: capitalize;">{{plugins.left4.list.konu2.title}}</span>
-                                        </md-button>
-                                        <md-divider ></md-divider>
-                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
-                                            <span flex style="text-transform: capitalize;">{{plugins.left4.list.konu3.title}}</span>
-                                        </md-button>
-                                        <md-divider ></md-divider>
+                                        <div ng-repeat="item in plugins.left4.items" style="height: 100%;" >
+                                            <menu-item content="item"></menu-item>
+                                        </div>
                                     </plugin>
                                     <plugin type="plugins.left5">
-                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
-                                            <span flex style="text-transform: capitalize;">{{plugins.left5.list.konu1.title}}</span>
-                                        </md-button>
-                                        <md-divider ></md-divider>
-                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
-                                            <span flex style="text-transform: capitalize;">{{plugins.left5.list.konu2.title}}</span>
-                                        </md-button>
-                                        <md-divider ></md-divider>
-                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
-                                            <span flex style="text-transform: capitalize;">{{plugins.left5.list.konu3.title}}</span>
-                                        </md-button>
-                                        <md-divider ></md-divider>
-                                        <md-button style="height: 30px; width: 100%; margin: 0; font-size: 12px; text-align: left;">
-                                            <span flex style="text-transform: capitalize;">{{plugins.left5.list.konu4.title}}</span>
-                                        </md-button>
-                                        <md-divider ></md-divider>
+                                        <div ng-repeat="item in plugins.left5.items" style="height: 100%;" >
+                                            <menu-item content="item"></menu-item>
+                                        </div>
                                     </plugin>
                                 </div>
                                 <div flex="none" hide show-gt-sm style="width: 7px; height: 100%;">
