--- a/app/src/index.html
+++ b/app/src/index.html
@@ -6,6 +6,7 @@
     <title>NgBlogger</title>
 
     <link rel="stylesheet" href="css/angular-material.min.css">
+    <link rel="stylesheet" href="css/angular-carousel.min.css">
     <link rel="stylesheet" href="css/style.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
@@ -90,9 +91,9 @@
                             <div layout="row" style="height:100%;">
                                 <div id="plugin_wrapper" flex style="height: 100%;">
                                     <plugin type="plugins.left1" style="height: auto;">
-                                        <menu-item content="plugins.left1.main"></menu-item>
-                                        <menu-item content="plugins.left1.docs"></menu-item>
-                                        <menu-item content="plugins.left1.news"></menu-item>
+                                        <menu-item content="plugins.left1.main" ui-sref="home"></menu-item>
+                                        <menu-item content="plugins.left1.docs" ui-sref="article"></menu-item>
+                                        <menu-item content="plugins.left1.news" ui-sref="news"></menu-item>
                                         <menu-item content="plugins.left1.atolye"></menu-item>
                                     </plugin>
                                     <plugin type="plugins.left2">
@@ -122,9 +123,19 @@
                             </div>
                         </div>
 
-                        <div id="container" flex-gt-sm="60" flex style="background-color: #ddaa6a; ">
-                            <div id="slider_main">
-
+                        <div id="container" flex-gt-sm="60" flex style="background-color: #ddaa6a; padding-left: 5px; padding-right: 5px; ">
+                            <div id="slider_main" hide show-gt-sm style="height: 300px; background-color: coral;" >
+                                <div style="height: 100%; text-align: center;">
+                                    <ul rn-carousel rn-carousel-index="0" rn-carousel-auto-slide="3" class="carousel5" style="height: 100%;">
+                                        <li>Slide 1</li>
+                                        <li>Slide 2</li>
+                                        <li>Slide 3</li>
+                                        <li>Slide 4</li>
+                                        <li>Slide 5</li>
+                                        <li>Slide 6</li>
+                                    </ul>
+                                </div>
+                                <div ui-view></div>
                             </div>
                         </div>
                         <div ng-controller="PluginController" id="right_plugins" flex-gt-sm="20" hide show-gt-sm style="background-color: #9E9E9E; ">
@@ -176,13 +187,18 @@
     </div>
 
     <script src="js/angular.min.js"></script>
+    <script src="js/angular-ui-router.min.js"></script>
+    <script src="js/angular-material.min.js"></script>
     <script src="js/angular-animate.min.js"></script>
     <script src="js/angular-aria.min.js"></script>
-    <script src="js/angular-material.min.js"></script>
     <script src="js/angular-messages.min.js"></script>
+    <script src="js/angular-touch.min.js"></script>
+    <script src="js/angular-carousel.js"></script>
 
     <script src="modules.min.js"></script>
+    <script src="routes.min.js"></script>
     <script src="controllers.min.js"></script>
     <script src="directives.min.js"></script>
+
 </body>
 </html>
