Thumb directive oluşturuldu. Thumb wrapper yapılacak.

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -123,7 +123,7 @@
                             </div>
                         </div>
 
-                        <div id="container" flex-gt-sm="60" flex style="background-color: #ddaa6a; padding-left: 5px; padding-right: 5px; ">
+                        <div id="container" flex-gt-sm="60" flex style="background-color: #d4d691; padding-left: 5px; padding-right: 5px; ">
                             <div id="slider_main" hide show-gt-sm style="height: 300px; background-color: coral;" >
                                 <div style="height: 100%; text-align: center;">
                                     <ul rn-carousel rn-carousel-index="0" rn-carousel-auto-slide="3" class="carousel5" style="height: 100%;">
@@ -135,8 +135,8 @@
                                         <li>Slide 6</li>
                                     </ul>
                                 </div>
-                                <div ui-view></div>
                             </div>
+                            <div ui-view></div>
                         </div>
                         <div ng-controller="PluginController" id="right_plugins" flex-gt-sm="20" hide show-gt-sm style="background-color: #9E9E9E; ">
                             <div layout="row" style="height: 100%;">
@@ -155,7 +155,7 @@
         </div>
     </div>
 
-    <div id="footer">
+    <div id="footer" hide>
         <div layout="row" layout-align="center center" style="height:100%; background-color: #9E9E9E; color: white;">
             <div layout="column" flex-gt-sm="70" flex style="height: 100%; background-color: rgba(221,111,111,0.95);">
                 <div flex="75" style="height: 100%; ">
